; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_hexdecoct.c_unbase32hexchar.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_hexdecoct.c_unbase32hexchar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @unbase32hexchar(i8 signext %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8, align 1
  %4 = alloca i32, align 4
  store i8 %0, i8* %3, align 1
  %5 = load i8, i8* %3, align 1
  %6 = sext i8 %5 to i32
  %7 = icmp sge i32 %6, 48
  br i1 %7, label %8, label %16

8:                                                ; preds = %1
  %9 = load i8, i8* %3, align 1
  %10 = sext i8 %9 to i32
  %11 = icmp sle i32 %10, 57
  br i1 %11, label %12, label %16

12:                                               ; preds = %8
  %13 = load i8, i8* %3, align 1
  %14 = sext i8 %13 to i32
  %15 = sub nsw i32 %14, 48
  store i32 %15, i32* %2, align 4
  br label %33

16:                                               ; preds = %8, %1
  store i32 10, i32* %4, align 4
  %17 = load i8, i8* %3, align 1
  %18 = sext i8 %17 to i32
  %19 = icmp sge i32 %18, 65
  br i1 %19, label %20, label %30

20:                                               ; preds = %16
  %21 = load i8, i8* %3, align 1
  %22 = sext i8 %21 to i32
  %23 = icmp sle i32 %22, 86
  br i1 %23, label %24, label %30

24:                                               ; preds = %20
  %25 = load i8, i8* %3, align 1
  %26 = sext i8 %25 to i32
  %27 = sub nsw i32 %26, 65
  %28 = load i32, i32* %4, align 4
  %29 = add i32 %27, %28
  store i32 %29, i32* %2, align 4
  br label %33

30:                                               ; preds = %20, %16
  %31 = load i32, i32* @EINVAL, align 4
  %32 = sub nsw i32 0, %31
  store i32 %32, i32* %2, align 4
  br label %33

33:                                               ; preds = %30, %24, %12
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
